--- a/Solutions/recommended-homework-solution/portfolio.html
+++ b/Solutions/recommended-homework-solution/portfolio.html
@@ -4,17 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Portfolio | Your Name</title>
-  <link href="bootstrap/css/bootstrap.css" rel="stylesheet" />
-  <link href="bootstrap/css/bootstrap-responsive.css" rel="stylesheet" />
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css">\
-  
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
 
-  <header id="navbar">
+  <header id="masthead">
     <div class="container">
-      <a href="index.html" id="logo">Jarez Howell</a>
+      <a href="index.html" id="logo">Your Name</a>
       <nav>
         <a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
