--- a/Solutions/recommended-homework-solution/contact.html
+++ b/Solutions/recommended-homework-solution/contact.html
@@ -4,26 +4,23 @@
 <head>
   <meta charset="UTF-8">
   <title>Contact | Your Name</title>
-  <link href="bootstrap/css/bootstrap.css" rel="stylesheet" />
-  <link href="bootstrap/css/bootstrap-responsive.css" rel="stylesheet" />
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
 
-    <header id="navbar">
-        <div class="container">
-          <a href="index.html" id="logo">Jarez Howell</a>
-          <nav>
-            <a href="index.html">About</a>
-            <a href="portfolio.html">Portfolio</a>
-            <a href="contact.html">Contact</a>
-          </nav>
-    
-        </div>
-      </header>
+  <header id="masthead">
+    <div class="container">
+      <a href="index.html" id="logo">Your Name</a>
+      <nav>
+        <a href="index.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </div>
+  </header>
 
-      <div id="main-container" class="container">
+  <div id="main-container" class="container">
     <section class="main-section">
       <h1>Contact</h1>
 
@@ -31,11 +28,11 @@
         <ul>
           <li>
             <label for="name">Name</label>
-            <input type="text" id="name" name="name" placeholder="Jarez Howell" required="required">
+            <input type="text" id="name" name="name" placeholder="John Smith" required="required">
           </li>
           <li>
             <label for="email">Email</label>
-            <input type="email" id="email" name="email" placeholder="jarez.howell89@gmail.com" required="required">
+            <input type="email" id="email" name="email" placeholder="example@gmail.com" required="required">
           </li>
           <li>
             <label for="message">Message</label>
