--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <header id="masthead">
     <div class="container">
-      <a href="index.html" id="logo">Your Name</a>
+      <a href="index.html" id="logo">Jarez Howell</a>
       <nav>
         <a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
@@ -24,14 +24,13 @@
     <section class="main-section">
       <h1>About Me</h1>
 
-      <img src="assets/images/cat.jpg" class="auth-image" alt="Your Name">
+      <img src="assets/images/kids.jpg" class="auth-image" alt="Your Name">
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum luctus felis, ac rhoncus nunc porttitor condimentum. Mauris sit amet dolor eu elit varius varius facilisis id arcu. Proin vel dui massa. Nunc rhoncus fringilla pharetra. Vestibulum bibendum consectetur euismod. Proin commodo purus vitae sollicitudin consectetur.</p>
-
-      <p>Donec vehicula lacus at leo feugiat lacinia. In et ex ultrices, ultrices neque non, pretium odio. Nunc id eros iaculis, pulvinar quam eget, egestas mauris.</p>
-
-      <p>Suspendisse dictum, arcu at convallis faucibus, quam sapien tincidunt nunc, sit amet egestas nibh tortor et mi. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-
+      <p>My name is Jarez Howell, I'm married to a beautiful woman with four amazing children. 
+       I grew up in a house with eleven family members in my household including my great grandmother and grandfather.
+      <p> When I was growing up, I would watch every L.A Laker game with my uncles, before I went outside to shoot around for two hours even at night. I loved basketball ever since.
+       I was lucky enough to have an uncle that was in the computer field who's very smart and also gave me motivation to pursue a career in the software field, 
+      currently I attend a Web Development Bootcamp at the University of Chapel Hill which is a dream come true.</p>
     </section>
 
   </div>
