--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
         <h3>RPG Game</h3>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
+        <link url="https://github.com/jhowell89/unit-4-game.git" alt="Trivia Game">
 
         <h3>Trivia Game</h3>
       </div>
