--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
         <h3>RPG Game</h3>
       </div>
       <div class="work">
-        <link url="https://github.com/jhowell89/unit-4-game.git" alt="Trivia Game">
+        <a href="https://github.com/jhowell89/unit-4-game.git" target="_blank">"Crystals Collector Game"></a>
 
         <h3>Trivia Game</h3>
       </div>
