--- a/portfolio.html
+++ b/portfolio.html
@@ -26,6 +26,8 @@
 
       <div class="work">
         <img src="assets/images/technics-q-c-640-480-1.jpg" alt="Word Guess">
+        <a href="file:///C:/Users/jhowe/Repos/unit-4-game/index.html" target="_self" data-ix="hide-portfolio-content-on-load" 
+        class="w-inline-block portfolio-content" style="opacity: 0; transition: opacity 500ms ease 0s;"></a>
 
         <h3>Word Guess</h3>
       </div>
