--- a/portfolio.html
+++ b/portfolio.html
@@ -38,12 +38,11 @@
         <h3>RPG Game</h3>
       </div>
       <div class="work">
-        <a href="https://github.com/jhowell89/unit-4-game" target="_blank">"Crystals Collector Game">
+        <a href="https://github.com/jhowell89/unit-4-game" target="_blank">
         <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget"></a>
-
-
-        <h3>Trivia Game</h3>
+        <h3>Crystals Collector Game</h3>
       </div>
+      
       <div class="work">
         <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
 
