updated contact page

--- a/bonus/sticky-footer.html
+++ b/bonus/sticky-footer.html
@@ -48,6 +48,8 @@
       Copyright &copy; 
     </div>
   </footer>
+  <script type="text/javascript" src="bonus/assets/javascript/main.js"></script>
+
 </body>
 
 </html>
