--- a/bonus/hover-styles.html
+++ b/bonus/hover-styles.html
@@ -16,6 +16,7 @@
         <a href="#">About</a>
         <a href="#">Portfolio</a>
         <a href="#">Contact</a>
+        
       </nav>
     </div>
   </header>
@@ -24,7 +25,7 @@
     <section class="main-section">
       <h1>Contact</h1>
 
-      <form id="contact-form">
+      <form id="contactForm">
         <ul>
           <li>
             <label for="name">Name</label>
@@ -60,6 +61,8 @@
       Copyright &copy;
     </div>
   </footer>
+  <script type="text/javascript" src="bonus/assets/javascript/main.js"></script>
+
 </body>
 
 </html>
