--- a/index.html
+++ b/index.html
@@ -5,17 +5,28 @@
   <meta charset="UTF-8">
   <title>About | Your Name</title>
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <!-- <script defer src="https://www.gstatic.com/firebasejs/7.10.0/firebase-app.js"></script> -->
+
+<!-- <script defer src="https://www.gstatic.com/firebasejs/4.8.2/firebase-app.js"></script>
+<script defer src="https://www.gstatic.com/firebasejs/4.8.2/firebase-firestore.js"></script>
+
+// ...
+
+<script defer src="./init-firebase.js"></script> -->
+<script src="https://www.gstatic.com/firebasejs/4.8.2/firebase.js"></script>
+
 </head>
 
 <body>
 
   <header id="masthead">
     <div class="container">
-      <a href="index.html" id="logo">Jarez Howell</a>
+      <a href="index.html" id="logo">Jarez R Howell</a>
       <nav>
         <a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
         <a href="contact.html">Contact</a>
+        <!-- <a href="sticky-footer.html">Contact & Connect</a> -->
       </nav>
     </div>
   </header>
@@ -40,6 +51,8 @@
       Copyright &copy; 
     </div>
   </footer>
+  
+  <!-- <script type="text/javascript" src="javascript/app.js"></script> -->
 </body>
 
 </html>
