--- a/portfolio.html
+++ b/portfolio.html
@@ -5,13 +5,15 @@
   <meta charset="UTF-8">
   <title>Portfolio | Your Name</title>
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <!-- <script src="https://www.gstatic.com/firebasejs/6.6.0/firebase-main.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/6.6.0/firebase-firestore.js"></script> -->
 </head>
 
 <body>
 
   <header id="masthead">
     <div class="container">
-      <a href="index.html" id="logo">Jarez Howell</a>
+      <a href="index.html" id="logo">Jarez R Howell</a>
       <nav>
         <a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
@@ -25,33 +27,30 @@
       <h1>Portfolio</h1>
 
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-1.jpg" alt="Word Guess">
-        <a href="file:///C:/Users/jhowe/Repos/unit-4-game/index.html" target="_self" data-ix="hide-portfolio-content-on-load" 
-        class="w-inline-block portfolio-content" style="opacity: 0; transition: opacity 500ms ease 0s;"></a>
-
-        <h3>Word Guess</h3>
+        <a href="https://github.com/jhowell89/Clicky-Game" target="_blank">
+          <img src="assets\images\fairly odd.gif" alt="Rutgers Info Widget"></a>
+        <h3>Clicky Game</h3>
       </div>
       <div class="work">
-        
-        <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
-
-        <h3>RPG Game</h3>
+        <a href="https://github.com/jhowell89/Train-Scheduler" target="_blank">
+          <img src="assets\images\train.jpg" alt="Rutgers Info Widget"></a>
+        <h3>Train Scheduler</h3>
       </div>
       <div class="work">
         <a href="https://github.com/jhowell89/unit-4-game" target="_blank">
-        <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget"></a>
+        <img src="assets\images\coloured-diamonds (1).jpg" alt="Rutgers Info Widget"></a>
         <h3>Crystals Collector Game</h3>
       </div>
       
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
-
-        <h3>Rutgers Info Widget</h3>
+        <a href="https://github.com/jhowell89/friend-finder" target="_blank">
+          <img src="assets\images\friends.png" alt="Rutgers Info Widget"></a>
+        <h3>Friend Finder App</h3>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
-
-        <h3>Rock Paper Scissors</h3>
+        <a href="https://github.com/jhowell89/Project-1" target="_blank">
+          <img src="assets\images\kitchen.png" alt="Rutgers Info Widget"></a>
+        <h3>Foodoku App</h3>
       </div>
 
     </section>
@@ -63,6 +62,7 @@
       Copyright &copy;
     </div>
   </footer>
+  <!-- <script type="text/javascript" src="javascript/app.js"></script> -->
 </body>
 
 </html>
