--- a/contact.html
+++ b/contact.html
@@ -30,11 +30,13 @@
 </header>
 
 <div id="main-container" class="container">
-  <div id="connect">
+  <a href="https://github.com/jhowell89" title="GitHub" target="_blank" class="w-inline-block social-icon"> 
+    <i class="fa fa-github"></i></a>
+  <!-- <div id="connect">
     <img src="assets\images\github.png" class="social" alt="Github">
     <img src="assets\images\LinkedIn-Logo.png" class="social" alt="LinkedIn">
     <img src="assets\images\stack.png" class="social" alt="Stack Overflow">
-  </div>
+  </div> -->
   <section class="main-section">
     <h1>Send a message</h1>
 
