--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,6 @@
 </head>
 
 <body>
-
   <header id="masthead">
     <div class="container">
       <a href="index.html" id="logo">Jarez R Howell</a>
@@ -21,6 +20,8 @@
       </nav>
     </div>
   </header>
+  
+ 
 
   <div id="main-container" class="container">
     <section class="main-section">
@@ -52,6 +53,20 @@
           <img src="assets\images\kitchen.png" alt="Rutgers Info Widget"></a>
         <h3>Foodoku App</h3>
       </div>
+      <div class="work">
+        <a href="https://github.com/jhowell89/Project2" target="_blank">
+          <img src="assets\images\beer.png" alt="Rutgers Info Widget"></a>
+        <h3>Beer Blog App</h3>
+      </div>
+      <div class="work">
+        <a href="https://github.com/jhowell89/Project-3" target="_blank">
+          <img src="assets\images\electroworld.png" alt="Rutgers Info Widget"></a>
+        <h3>Ecommerce App</h3>
+      </div>
+      <div class="work">
+        <a href="https://github.com/jhowell89/Burger" target="_blank">
+          <img src="assets\images\burger.png" alt="Rutgers Info Widget"></a>
+        <h3>Burger App</h3>
 
     </section>
 
