--- a/index.html
+++ b/index.html
@@ -36,12 +36,13 @@
       <h1>About Me</h1>
 
       <img src="assets/images/kids.jpg" class="auth-image" alt="Your Name">
-
+      <div class="column">
       <p>My name is Jarez Howell, I'm married to a beautiful woman with four amazing children. 
        I grew up in a house with eleven family members in my household including my great grandmother and grandfather.
       <p> When I was growing up, I would watch every L.A Laker game with my uncles, before I went outside to shoot around for two hours even at night. I loved basketball ever since.
        I was lucky enough to have an uncle that was in the computer field who's very smart and also gave me motivation to pursue a career in the software field, 
       currently I attend a Web Development Bootcamp at the University of Chapel Hill which is a dream come true.</p>
+      </div>
     </section>
 
   </div>
