--- a/index.html
+++ b/index.html
@@ -101,36 +101,39 @@
                   </div>
                   <h1>Web Design</h1>
                   <p>Visual Design to improve the look and 
-                     enhance the feel of the site usin photoshop, canva
-                     The UX of a website is the feeling and experience 
+                     enhance the feel of the site using photoshop, canva
+                     and Adobe Illustrator.
+                     The UX of a website for the best feeling and experience 
                      that the visitor has when browsing that website.
                      Manage configuration changes to fields, workflows, 
                      roles/permissions, page layouts, custom objects, 
                      custom record types, reports and dashboards. </p>
                   </div>
+
+                  <div class="skills"data-aos="fade-in" data-aos-delay="900" >
+                    <div class="icon-container">
+                        <i class="fas fa-chart-bar"></i>
+                    </div>
+                    <h1>Quality Assurance</h1>
+                    <p>Identify, record, document, and track bugs.
+                        Design, develop and execute automation scripts.
+                        Constantly improve software test process using 
+                        automation and emerging technology.
+                        Manage the suite of manual and automated test cases.</p>
+                    </div>
                   <div class="skill" data-aos="fade-in" data-aos-delay="600">
                     <div class="icon-container">
                         <i class="fas fa-code"></i>
                     </div>
                     <h1>Web Development</h1>
                     <p>Build, Design, and Debug Responsive Full Stack Web Applications, React, 
-                       and mobile apps using JavaScript, bootstrap, reactstrap, react-dom, HTML, CSS, 
+                       and mobile apps using JavaScript, bootstrap, reactstrap, react-dom, HTML, CSS, HTML5 
                        and jQuery. Manage data in databases 
-                       using languages such as SQL and NoSQL, MongoDB, Firebase, create API's and others.
+                       using languages such as SQL, NoSQL, MongoDB, Firebase, create API's and others.
                        Also build JavaScript apps outside of the browser using Node.js for 
                        a more dynamic experience.  </p>
                     </div>
-                    <div class="skill"data-aos="fade-in" data-aos-delay="900" >
-                        <div class="icon-container">
-                            <i class="fas fa-chart-bar"></i>
-                        </div>
-                        <h1>Quality Assurance</h1>
-                        <p>Identify, record, document, and track bugs.
-                            Design, develop and execute automation scripts.
-                            Constantly improve software test process using 
-                            automation and emerging technology.
-                            Manage the suite of manual and automated test cases.</p>
-                        </div>
+                    
               </div>
           </div>
       </section>
@@ -150,8 +153,8 @@
                     <h1>Clicky Game</h1>
                     <p>
                         For this app, I created a memory game with React. 
-                        This assignment required me to break up my application's UI into components,
-                         manage component state, and respond to user events
+                        This project required me to break up my application's UI into components,
+                        manage component state, and respond to user events
                     </p>
                     <a href="https://github.com/jhowell89/Clicky-Game" class="cta">View Code</a> 
                     <br>  
