updated scroll bar

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     I'm a family man that's married to a beautiful woman with 4 amazing (yet busy) children that continues 
                     to push me to achieve my goals as a creative developer. I'm currently
                     on a path of continious learning, studying, exploring, and creating applications for the users to enjoy.
-                    The qoute that I am living by today is
+                    The quote that I am living by today is
                     "Success is not final; failure is not fatal: It is the courage to continue that counts."
 
                     -- Winston S. Churchill
@@ -79,7 +79,7 @@
                                   </a>
                               </li>
                               <li>
-                                  <a href="https://www.linkedin.com/mwlite/me" class="icon-link">
+                                  <a href="https://www.linkedin.com/in/jhowell89" class="icon-link">
                                       <i class="fab fa-linkedin"></i>
                                   </a>
                               </li>
