--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <div class="landing-text" data-aos="fade-up" data-aos-delay="2000" data-aos-easing="ease-in-quad">
         
               <h1>Jarez Howell</h1>
-              <h6>UI | UX Designer and Back-End Web Developer</h6>
+              <h6>Web Developer & Programmer</h6>
           </div>
       </header>
       <section class="about" id="about">
